// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.gravitalia.torresix.torresix";
option java_outer_classname = "TorresixProto";

package torresix;

// The crawler service definition.
service Torre {
    // Sends a a request to predict a result of AI
    rpc TorrePredict (TorreRequest) returns (TorreReply) {}
}

// The request message containing the model ID and the required data
message TorreRequest {
    int32 model = 1;
    bytes data = 2;
}

// The response message containing the model ID, the response and if there were an error
message TorreReply {
    int32 model = 1;
    string message = 2;
    bool error = 3;
}
